test/expected/declare_enc-c.out
declare x as enum class C
        ^
9: warning: "class" is a keyword in C++98
declare x as enum class C
                        ^
25: syntax error: "C": unexpected token
enum class x;
